Cleanup gradle configuration (#28)
* Remove unnecessarry wrapper module to allow unnamed module consumption

* Require module name

* Cleanup dependencies

* Reorder module info

* Move version to gradle.properties

* read unnamed modules from all modules

* apply java plugin to all modules

* Make group name consistent with rest of the project

* Move faststats repo to server module

* Properly define unnamed module names read

* simplify run task configuration

* fix failing javadocJar